# little-lost-robot

./: .gitignore  CMakeLists.txt  DIARY.md  LICENSE.md  README.md  robopuzzle.kdev4
res/textures/: screen_start.tga
res/textures/boxes/: box_template.tga  simple_crate.tga  unmovable_crate.tga
res/textures/commands/: ROBCOM_BACKWARD.tga  ROBCOM_FORWARD.tga  ROBCOM_GRASP.tga  ROBCOM_LEFT.tga  ROBCOM_RELEASE.tga  ROBCOM_RIGHT.tga  ROBCOM_TOGGLE_GRABBER.tga  command-template.tga
src/: AnimatedRobot.cpp  AnimatedRobot.h  BestCamera.cpp  BestCamera.h  CMakeLists.txt  Camera.cpp  Camera.h  ChaseCamera.cpp  ChaseCamera.h  Game.cpp  Game.h  Grid.h  InteractSwitch.cpp  InteractSwitch.h  Level.cpp  Level.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  LookAtCamera.cpp  LookAtCamera.h  OverviewCamera.cpp  OverviewCamera.h  Robot.cpp  Robot.h  RobotCommand.cpp  RobotCommand.h  RobotInteractObject.cpp  RobotInteractObject.h  RobotVisionCamera.cpp  RobotVisionCamera.h  SOFinish.cpp  SOFinish.h  SONormalSquare.cpp  SONormalSquare.h  SOStart.cpp  SOStart.h  SOWall_End.cpp  SOWall_End.h  (+27 more)
src/TexSupport/: CMakeLists.txt.bak  Image.cpp  Image.h  ImageReader.h  TgaReader.cpp  TgaReader.h  tga.h  tga_reader.h
